Bug 347114 - nsVoidArray::SetArray implementation is marked inline incorrectly, r=obvious build bustage